--- a/YiHuo-Web-Before/pom.xml
+++ b/YiHuo-Web-Before/pom.xml
@@ -87,20 +87,20 @@
         </dependency>
 
         <dependency>
-            <groupId>com.qfedu</groupId>
-            <artifactId>Video-entry</artifactId>
+            <groupId>com.qfeud</groupId>
+            <artifactId>YiHuo-Entry</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>com.qfedu</groupId>
-            <artifactId>Video-Dao</artifactId>
+            <groupId>com.qfeud</groupId>
+            <artifactId>YiHuo-Dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>com.qfedu</groupId>
-            <artifactId>Video-Service</artifactId>
+            <groupId>com.qfeud</groupId>
+            <artifactId>YiHuo-Service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
@@ -108,14 +108,14 @@
     <build>
         <plugins>
             <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <configuration>
-                                <source>1.8</source>
-                                <target>1.8</target>
-                                <encoding>UTF-8</encoding>
-                            </configuration>
-                        </plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
