--- a/YiHuo-Dao/pom.xml
+++ b/YiHuo-Dao/pom.xml
@@ -49,6 +49,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.qfeud</groupId>
             <artifactId>YiHuo-Entry</artifactId>
             <version>1.0-SNAPSHOT</version>
