--- a/YiHuo-Web-Before/pom.xml
+++ b/YiHuo-Web-Before/pom.xml
@@ -87,6 +87,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.qfeud</groupId>
             <artifactId>YiHuo-Entry</artifactId>
             <version>1.0-SNAPSHOT</version>
