上传两个图片Utils

--- a/YiHuo-Web-Before/src/main/resources/info.properties
+++ b/YiHuo-Web-Before/src/main/resources/info.properties
@@ -1,2 +1,2 @@
-IMG_PATH=D:\\TomCat\\FengMiImages
-IMG_URL=http://localhost:8081/images/
+IMG_PATH=G:\\tomcatImg\\Img
+IMG_URL=http://localhost:8083/images/
