--- a/pom.xml
+++ b/pom.xml
@@ -208,7 +208,11 @@
                 <artifactId>mail</artifactId>
                 <version>1.4</version>
             </dependency>
-
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>1.3.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
